<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <TextView
            android:text="Waluta obca"
            style="@style/label.curr"/>

        <Spinner
            android:id="@+id/spin_foreign"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="55"
            android:entries="@array/spin_test"
            android:gravity="top"/>

        <TextView
            android:text="Wpisz kwotę w walucie obcej:"
            style="@style/label.descr"/>

    </LinearLayout>

    <LinearLayout
        style="@style/layout_back">

        <EditText
            android:id="@+id/edit_foreign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:digits="0123456789,."
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:text="1"
            tools:text="10.25">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="10"
        android:background="@drawable/button_pressed"
        android:focusable="true"
        android:onClick="onCalcButtonClick"
        android:text="PRZELICZ" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <TextView
            android:text="Waluta macierzysta"
            style="@style/label.curr"/>

        <Spinner
            android:id="@+id/spin_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="55"
            android:entries="@array/spin_test"
            android:gravity="top"/>

        <TextView
            android:text="Kwota w walucie macierzystej:"
            style="@style/label.descr"/>
    </LinearLayout>

    <LinearLayout
        style="@style/layout_back">

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorSemiDarkGrey"
            android:textSize="30sp"
            android:textStyle="normal"
            tools:text="125.10" />
    </LinearLayout>
</LinearLayout>